tests/errors/dict_remove_unhashable.ki
var d = {"a": 1}
discard d.remove([1])
